# pico-coldfire-bdm

./: README.md
arduino_coldfire_bdm/: bdm_interface.py  command_line.py  serial_interface.py
pico-firmware/: CMakeLists.txt  main.c
